Algol60Gradle/src/main/java/ALGOL60/grammar/Algol60Parser.java
package ALGOL60.grammar;// $ANTLR null /home/walid/Bureau/COMPILATION/tester-file/Algol60.g 2020-04-26 18:10:05

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class Algol60Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY_ACCESS", "ARRAY_BOUNDS", 
		"ARRAY_DECLARATION", "ARRAY_DIMENSION", "ARRAY_ID", "ARRAY_SEGMENT", "ASSIGNMENT", 
		"BEGIN", "BLOCK", "BOUNDS", "COMMENT", "DECLARATIONS", "DO", "ELSE", "EMPTY_STATEMENT", 
		"ESC_SEQ", "EXPONENT", "FOR", "FOR_ELEMENT", "FOR_LIST", "FUNCTION_CALL", 
		"GOTO", "IF", "INDEX", "INT", "Identifier", "LABEL", "LABELLED_BLOCK", 
		"LABELLED_EMPTY_STATEMENT", "LABELLED_STATEMENT", "LABELLIST", "LISTPARAMETER", 
		"LOCAL_DECLARATION", "Letter", "Number", "OCTAL_ESC", "OWN_DECLARATION", 
		"PROC_DECLARATION", "PROG", "SPECIFICATION", "SPECIFIED_ID", "STATEMENTS", 
		"STEP", "STRING", "SWITCH_CALL", "SWITCH_CASE", "SWITCH_DECLARATION", 
		"SWITCH_LIST", "THEN", "UNTIL", "VALUE", "VAR_ID", "WHILE", "WS", "'('", 
		"')'", "'*'", "'**'", "'+'", "','", "'-'", "'/'", "'//'", "':'", "':='", 
		"';'", "'<'", "'<='", "'<=>'", "'<>'", "'='", "'=>'", "'>'", "'>='", "'AND'", 
		"'OR'", "'['", "']'", "'array'", "'begin'", "'boolean'", "'do'", "'else'", 
		"'end'", "'false'", "'for'", "'goto'", "'if'", "'integer'", "'label'", 
		"'own'", "'procedure'", "'real'", "'step'", "'string'", "'switch'", "'then'", 
		"'true'", "'until'", "'value'", "'while'", "'~'"
	};
	public static final int EOF=-1;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int T__67=67;
	public static final int T__68=68;
	public static final int T__69=69;
	public static final int T__70=70;
	public static final int T__71=71;
	public static final int T__72=72;
	public static final int T__73=73;
	public static final int T__74=74;
	public static final int T__75=75;
	public static final int T__76=76;
	public static final int T__77=77;
	public static final int T__78=78;
	public static final int T__79=79;
	public static final int T__80=80;
	public static final int T__81=81;
	public static final int T__82=82;
	public static final int T__83=83;
	public static final int T__84=84;
	public static final int T__85=85;
	public static final int T__86=86;
	public static final int T__87=87;
	public static final int T__88=88;
	public static final int T__89=89;
	public static final int T__90=90;
	public static final int T__91=91;
	public static final int T__92=92;
	public static final int T__93=93;
	public static final int T__94=94;
	public static final int T__95=95;
	public static final int T__96=96;
	public static final int T__97=97;
	public static final int T__98=98;
	public static final int T__99=99;
	public static final int T__100=100;
	public static final int T__101=101;
	public static final int T__102=102;
	public static final int T__103=103;
	public static final int T__104=104;
	public static final int T__105=105;
	public static final int ARRAY_ACCESS=4;
	public static final int ARRAY_BOUNDS=5;
	public static final int ARRAY_DECLARATION=6;
	public static final int ARRAY_DIMENSION=7;
	public static final int ARRAY_ID=8;
	public static final int ARRAY_SEGMENT=9;
	public static final int ASSIGNMENT=10;
	public static final int BEGIN=11;
	public static final int BLOCK=12;
	public static final int BOUNDS=13;
	public static final int COMMENT=14;
	public static final int DECLARATIONS=15;
	public static final int DO=16;
	public static final int ELSE=17;
	public static final int EMPTY_STATEMENT=18;
	public static final int ESC_SEQ=19;
	public static final int EXPONENT=20;
	public static final int FOR=21;
	public static final int FOR_ELEMENT=22;
	public static final int FOR_LIST=23;
	public static final int FUNCTION_CALL=24;
	public static final int GOTO=25;
	public static final int IF=26;
	public static final int INDEX=27;
	public static final int INT=28;
	public static final int Identifier=29;
	public static final int LABEL=30;
	public static final int LABELLED_BLOCK=31;
	public static final int LABELLED_EMPTY_STATEMENT=32;
	public static final int LABELLED_STATEMENT=33;
	public static final int LABELLIST=34;
	public static final int LISTPARAMETER=35;
	public static final int LOCAL_DECLARATION=36;
	public static final int Letter=37;
	public static final int Number=38;
	public static final int OCTAL_ESC=39;
	public static final int OWN_DECLARATION=40;
	public static final int PROC_DECLARATION=41;
	public static final int PROG=42;
	public static final int SPECIFICATION=43;
	public static final int SPECIFIED_ID=44;
	public static final int STATEMENTS=45;
	public static final int STEP=46;
	public static final int STRING=47;
	public static final int SWITCH_CALL=48;
	public static final int SWITCH_CASE=49;
	public static final int SWITCH_DECLARATION=50;
	public static final int SWITCH_LIST=51;
	public static final int THEN=52;
	public static final int UNTIL=53;
	public static final int VALUE=54;
	public static final int VAR_ID=55;
	public static final int WHILE=56;
	public static final int WS=57;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public Algol60Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public Algol60Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return Algol60Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/walid/Bureau/COMPILATION/tester-file/Algol60.g"; }


	 CommonTree Identifiermemory;
	 CommonTree Identifiermemory2;



	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:95:1: program : start_program -> ^( PROG start_program ) ;
	public final program_return program() throws RecognitionException {
		program_return retval = new program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope start_program1 =null;

		RewriteRuleSubtreeStream stream_start_program=new RewriteRuleSubtreeStream(adaptor,"rule start_program");

		try {
			// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:95:12: ( start_program -> ^( PROG start_program ) )
			// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:95:15: start_program
			{
			pushFollow(FOLLOW_start_program_in_program225);
			start_program1=start_program();
			state._fsp--;

			stream_start_program.add(start_program1.getTree());
			// AST REWRITE
			// elements: start_program
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 95:29: -> ^( PROG start_program )
			{
				// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:95:31: ^( PROG start_program )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG, "PROG"), root_1);
				adaptor.addChild(root_1, stream_start_program.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class start_program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "start_program"
	// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:99:1: start_program : ( rest_program | 'begin' ( declaration ';' )* compound_tail -> ^( BEGIN ( ^( DECLARATIONS ( declaration )* ) )? ( ^( BLOCK compound_tail ) )? ) );
	public final start_program_return start_program() throws RecognitionException {
		start_program_return retval = new start_program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal3=null;
		Token char_literal5=null;
		ParserRuleReturnScope rest_program2 =null;
		ParserRuleReturnScope declaration4 =null;
		ParserRuleReturnScope compound_tail6 =null;

		CommonTree string_literal3_tree=null;
		CommonTree char_literal5_tree=null;
		RewriteRuleTokenStream stream_69=new RewriteRuleTokenStream(adaptor,"token 69");
		RewriteRuleTokenStream stream_83=new RewriteRuleTokenStream(adaptor,"token 83");
		RewriteRuleSubtreeStream stream_compound_tail=new RewriteRuleSubtreeStream(adaptor,"rule compound_tail");
		RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");

		try {
			// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:100:3: ( rest_program | 'begin' ( declaration ';' )* compound_tail -> ^( BEGIN ( ^( DECLARATIONS ( declaration )* ) )? ( ^( BLOCK compound_tail ) )? ) )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==Identifier||LA2_0==Number) ) {
				alt2=1;
			}
			else if ( (LA2_0==83) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:100:5: rest_program
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_rest_program_in_start_program270);
					rest_program2=rest_program();
					state._fsp--;

					adaptor.addChild(root_0, rest_program2.getTree());

					}
					break;
				case 2 :
					// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:15: 'begin' ( declaration ';' )* compound_tail
					{
					string_literal3=(Token)match(input,83,FOLLOW_83_in_start_program286);  
					stream_83.add(string_literal3);

					// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:23: ( declaration ';' )*
					loop1:
					while (true) {
						int alt1=2;
						int LA1_0 = input.LA(1);
						if ( (LA1_0==82||LA1_0==84||LA1_0==92||(LA1_0 >= 94 && LA1_0 <= 96)||LA1_0==99) ) {
							alt1=1;
						}

						switch (alt1) {
						case 1 :
							// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:24: declaration ';'
							{
							pushFollow(FOLLOW_declaration_in_start_program289);
							declaration4=declaration();
							state._fsp--;

							stream_declaration.add(declaration4.getTree());
							char_literal5=(Token)match(input,69,FOLLOW_69_in_start_program291);  
							stream_69.add(char_literal5);

							}
							break;

						default :
							break loop1;
						}
					}

					pushFollow(FOLLOW_compound_tail_in_start_program295);
					compound_tail6=compound_tail();
					state._fsp--;

					stream_compound_tail.add(compound_tail6.getTree());
					// AST REWRITE
					// elements: compound_tail, declaration
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 101:56: -> ^( BEGIN ( ^( DECLARATIONS ( declaration )* ) )? ( ^( BLOCK compound_tail ) )? )
					{
						// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:59: ^( BEGIN ( ^( DECLARATIONS ( declaration )* ) )? ( ^( BLOCK compound_tail ) )? )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BEGIN, "BEGIN"), root_1);
						// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:68: ( ^( DECLARATIONS ( declaration )* ) )?
						if ( stream_declaration.hasNext() ) {
							// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:68: ^( DECLARATIONS ( declaration )* )
							{
							CommonTree root_2 = (CommonTree)adaptor.nil();
							root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(DECLARATIONS, "DECLARATIONS"), root_2);
							// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:83: ( declaration )*
							while ( stream_declaration.hasNext() ) {
								adaptor.addChild(root_2, stream_declaration.nextTree());
							}
							stream_declaration.reset();

							adaptor.addChild(root_1, root_2);
							}

						}
						stream_declaration.reset();

						// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:98: ( ^( BLOCK compound_tail ) )?
						if ( stream_compound_tail.hasNext() ) {
							// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:101:98: ^( BLOCK compound_tail )
							{
							CommonTree root_2 = (CommonTree)adaptor.nil();
							root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_2);
							adaptor.addChild(root_2, stream_compound_tail.nextTree());
							adaptor.addChild(root_1, root_2);
							}

						}
						stream_compound_tail.reset();

						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "start_program"


	public static class rest_program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "rest_program"
	// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:104:1: rest_program : ( label ':' ) start_program -> ^( LABELLED_BLOCK label start_program ) ;
	public final rest_program_return rest_program() throws RecognitionException {
		rest_program_return retval = new rest_program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal8=null;
		ParserRuleReturnScope label7 =null;
		ParserRuleReturnScope start_program9 =null;

		CommonTree char_literal8_tree=null;
		RewriteRuleTokenStream stream_67=new RewriteRuleTokenStream(adaptor,"token 67");
		RewriteRuleSubtreeStream stream_label=new RewriteRuleSubtreeStream(adaptor,"rule label");
		RewriteRuleSubtreeStream stream_start_program=new RewriteRuleSubtreeStream(adaptor,"rule start_program");

		try {
			// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:105:14: ( ( label ':' ) start_program -> ^( LABELLED_BLOCK label start_program ) )
			// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:105:17: ( label ':' ) start_program
			{
			// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:105:17: ( label ':' )
			// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:105:18: label ':'
			{
			pushFollow(FOLLOW_label_in_rest_program344);
			label7=label();
			state._fsp--;

			stream_label.add(label7.getTree());
			char_literal8=(Token)match(input,67,FOLLOW_67_in_rest_program346);  
			stream_67.add(char_literal8);

			}

			pushFollow(FOLLOW_start_program_in_rest_program349);
			start_program9=start_program();
			state._fsp--;

			stream_start_program.add(start_program9.getTree());
			// AST REWRITE
			// elements: label, start_program
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 105:43: -> ^( LABELLED_BLOCK label start_program )
			{
				// /home/walid/Bureau/COMPILATION/tester-file/Algol60.g:105:46: ^( LABELLED_BLOCK label start_program )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(LABELLED_BLOCK, "LABELLED_BLOCK"), root_1);
				adaptor.addChild(root_1, stream_label.nextTree());
				adaptor.addChild(root_1, stream_start_program.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
